--- a/experimental-features.mdx
+++ b/experimental-features.mdx
@@ -13,14 +13,6 @@ We will probably auto-activate most features that we soft launch in `experimenta
 
 The `experimental_features` parameter accepts an array of strings, where each string identifies a feature. The rest of this doc describes each experimental feature currently in prod, when the feature will become opt-out (rather than opt-in), and gives the feature's identifier. 
 
-### CCTP ("CCTP")
-
-**Description:** Support for routing over CCTP between EVM chains and Noble in either direction
-
-**Opt-out switch**: CCTP routing will auto-activate on March 13 2024
-
-**Identifier:** "CCTP"
-
 ### Hyperlane ("HYPERLANE")
 
 **Description:** Support for routing over all Hyperlane Warp Routes in the official Hyperlane registry
@@ -29,9 +21,9 @@ The `experimental_features` parameter accepts an array of strings, where each st
 
 **Identifier:** "HYPERLANE"
 
-<Check>
 
-Want to help us get better? Have questions or feedback?
-
-You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
-</Check>
+ <Check>
+ **Want to help us get better? Have questions or feedback?**
+ 
+ You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
+ </Check>
