--- a/upcoming-features.mdx
+++ b/upcoming-features.mdx
@@ -5,31 +5,25 @@ description: "This page highlights a few of the features we're cooking up ðŸ§‘â€
 
 #### New bridges
 
-* Bifrost
 * Wormhole
+* Union
+* Bifrost
+* Synapse
 * Initia's native bridge
-
-#### Prioritized, low-latency Relaying
-
-**What:** Automatically relays all transfers over any bridge for any route with higher speeds and better reliability than public relayers
-
-**Why:** Relayers sometimes go down, get backed up, or just have too many packets to relay. To provide consistently responsive, snappy user experiences, frontends need to be able to have access to reliably low-latency relaying. 
-
-(Longer term, we're working on improving relayer incentives to create more robust markets for high-quality relaying services.) 
 
 #### More DEXes
 
 We're currently adding support for: 
 
-* Initia's native DEX
 * Astrovault
 * Helix on Injective
+* Dojo Swap
 * Kujira's native DEX
 * Stride (conversions between TOKEN + stTOKEN)
 
+
 <Check>
-
-**Want to help us get better? Have questions or feedback?**
-
-You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
-</Check>
+ **Want to help us get better? Have questions or feedback?**
+ 
+ You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
+ </Check>
