--- a/allow_unsafe-preventing-handling-bad-execution.mdx
+++ b/allow_unsafe-preventing-handling-bad-execution.mdx
@@ -8,29 +8,31 @@ title: "`allow_unsafe`: Preventing & Handling Bad Execution"
 
 This parameter indicates whether you want to allow the API to return and execute a route even when our routing engine forecasts low or unknown execution quality: 
 
-* `allow_unsafe=false` (default): The API will throw an error instead of returning a route when the routing engine forecasts bad execution quality (i.e. \> 10% `price_impact` or difference between USD value in and out) or when execution quality can't be determined.
-* `allow_unsafe=true`: The API will return a route for a trade even when the routing engine forecasts bad execution quality (i.e. \> 10% `price_impact` or difference between USD value in and out) or when execution quality can't be determined. In these cases, the API appends a `warning` to the response in a `warning` field
+* `allow_unsafe=false` (default): The API will throw an error instead of returning a route when the routing engine forecasts bad execution quality (i.e. > 10% `price_impact` or difference between USD value in and out) or when execution quality can't be determined.
+* `allow_unsafe=true`: The API will return a route for a trade even when the routing engine forecasts bad execution quality (i.e. > 10% `price_impact` or difference between USD value in and out) or when execution quality can't be determined. In these cases, the API appends a `warning` to the response in a `warning` field
 
-<Note>
 
-**Make sure you understand execution/quote quality measurements first**
+ <Info>
+ **Make sure you understand execution/quote quality measurements first**
+ 
+ Before reading this doc, you should read our documentation on quote quality: [ Understanding Quote Quality Metrics](/understanding-quote-quality-metrics). This provides basic background information about the different ways the Skip API measures whether a route will likely give a user a bad execution price, namely the difference between the USD value of the input and the output & on-chain price impact.
+</Info>
 
-Before reading this doc, you should read our documentation on quote quality: [ Understanding Quote Quality Metrics](/docs/understanding-quote-quality-metrics). This provides basic background information about the different ways the API measures whether a route will likely give a user a bad execution price, namely the difference between the USD value of the input and the output & on-chain price impact.
-</Note>
 ## `allow_unsafe=false` Behavior
 
-When `allow_unsafe=false`, the endpoint throws an error when execution quality is low (as measured by price impact or estimated USD value lost) or when execution quality can't be determined (i.e. neither of these measurements are available). 
+When `allow_unsafe=false`, the endpoint throws an error when execution quality is poor (as measured by price impact or estimated USD value lost) or when execution quality can't be determined (i.e. neither of these measurements are available). 
 
-Below, we provide examples of each case where the API returns an error when `allow_unsafe=false`:
+In particular, if `allow_unsafe=false`, `/route` and `/msgs_direct` return errors when:
 
 * `price_impact > .10`(the swap will move the on-chain price by more than 10%)
 * `(usd_amount_in-usd_amount_out)/usd_amount_in)>.10` (greater than 10% of the value of the input is lost)
 * Neither of the above metrics can be computed
 
+Below, we provide examples of the responses in each these cases. 
+
 The price impact is greater than 10% (`BAD_PRICE_ERROR`):
 
-```JSON
-{  
+* ```{  
   "code": 3,  
   "message": "swap execution price in route deviates too far from market price. expected price impact: 98.6915%",  
   "details": [  
@@ -46,8 +48,7 @@ The price impact is greater than 10% (`BAD_PRICE_ERROR`):
 
 The user loses more than 10% of their USD value (`BAD_PRICE_ERROR`):
 
-```json
-{  
+* ```{  
   "code": 3,  
   "message": "difference in usd value of route input and output is too large. input usd value: 1000 output usd value: 600",  
   "details": [  
@@ -63,8 +64,8 @@ The user loses more than 10% of their USD value (`BAD_PRICE_ERROR`):
 
 The `price_impact` and the estimated USD value difference cannot be calculated (`LOW_INFO_ERROR`)
 
-```json
-{  
+* JSON  
+```{  
   "code": 3,  
   "message": "unable to determine route safety",  
   "details": [  
@@ -80,7 +81,7 @@ The `price_impact` and the estimated USD value difference cannot be calculated (
 
 ## `allow_unsafe=true` Behavior
 
-When `allow_unsafe=true`, the endpoints will still return routes even when the routing engine forecasts will have bad execution price (measured by price\_impact or estimated USD lost), but they will have a `warning` field appended to them. 
+When `allow_unsafe=true`, the endpoints will still return routes even when the routing engine forecasts will have unknown or poor execution quality (measured by price\_impact or estimated USD lost), but they will have a `warning` field appended to them. 
 
 The `warning` field is populated exactly when the endpoints would return an error if `allow_unsafe` were `false`, namely: 
 
@@ -88,11 +89,12 @@ The `warning` field is populated exactly when the endpoints would return an erro
 * `(usd_amount_in-usd_amount_out)/usd_amount_in)>.10` (greater than 10% of the value of the input is lost)
 * Neither of the above metrics can be computed
 
-Below, we provide examples of each case where the API returns a warning
+Below, we provide examples of the responses in each these cases. 
 
 The price impact is greater than 10% (`BAD_PRICE_WARNING`):
 
-```JSON  
+*   
+```JSON JSON
 "warning": {  
     "type": "BAD_PRICE_WARNING",  
     "message": "swap execution price in route deviates too far from market price. expected price impact: 98.6826%"  
@@ -101,8 +103,7 @@ The price impact is greater than 10% (`BAD_PRICE_WARNING`):
 
 More than 10% of the USD value of the input is lost in the swap (`BAD_PRICE_WARNING`): 
 
-```
-"warning": {  
+* ```"warning": {  
     "type": "BAD_PRICE_WARNING",  
     "message": "difference in usd value of route input and output is too large. input usd value: 1000 output usd value: 600"  
 }  
@@ -110,8 +111,7 @@ More than 10% of the USD value of the input is lost in the swap (`BAD_PRICE_WARN
 
 The `price_impact` and the estimated USD value difference cannot be calculated (`LOW_INFO_ERROR`)
 
-```
-"warning": {  
+* ```"warning": {  
     "type": "LOW_INFO_WARNING",  
     "message": "unable to determine route safety"  
 }  
@@ -121,11 +121,10 @@ The `price_impact` and the estimated USD value difference cannot be calculated (
 
 **Above all else, we recommend setting `allow_unsafe=false`**
 
-In addition, we recommend reading our documentation around [safe API integrations](/docs/safe-swapping-how-to-protect-users-from-harming-themselves) to learn about UX/UI practices that can further help prevent users from performing trades they'll immediately regret.
+In addition, we recommend reading our documentation around [safe API integrations](/safe-swapping-how-to-protect-users-from-harming-themselves) to learn about UX/UI practices that can further help prevent users from performing trades they'll immediately regret.
 
-<Check>
-
-Want to help us get better? Have questions or feedback?
-
-You can reach us easily at support@skip.money or in [our developer support channel on TG](https://t.me/+3y5biSyZRPIwZWIx)
-</Check>
+ <Check>
+ **Want to help us get better? Have questions or feedback?**
+ 
+ You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
+ </Check>
