--- a/gas-and-fee-tooling.mdx
+++ b/gas-and-fee-tooling.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Gas and Fee Tooling"
+title: "Gas and Transaction Fee Tooling"
 description: "This doc describes the gas and fee tooling in @skip-router/core (our typescript library)"
 ---
 
@@ -9,12 +9,12 @@ description: "This doc describes the gas and fee tooling in @skip-router/core (o
 
 This doc describes all the tooling we've built into the library to get information about gas & fees, and customize how they're set on your transactions. 
 
-<Note>
 
-**Video Overview**
-
-Here's a video overview for folks who are more visual: [https://www.loom.com/share/063e96e126d2422bb621b5b0ecf9be2c](https://www.loom.com/share/063e96e126d2422bb621b5b0ecf9be2c)
-</Note>
+ <Info>
+ **Video Overview**
+ 
+ Here's a video overview for folks who are more visual: [https://www.loom.com/share/063e96e126d2422bb621b5b0ecf9be2c](https://www.loom.com/share/063e96e126d2422bb621b5b0ecf9be2c)
+</Info>
 
 ## `SkipRouter` functions for getting info about gas and fees
 
@@ -24,11 +24,15 @@ These functions are useful for getting information about our default gas and fee
 
 This returns the gas price (i.e. the price of a single unit of gas) the API recommends you use for transactions on a particular chain. 
 
+
+
 ```JavaScript JavaScript
 async getRecommendedGasPrice(chainID: string) -> GasPrice
 ```
 
 `GasPrice` is a [cosmjs](https://cosmos.github.io/cosmjs/latest/stargate/classes/GasPrice.html) type giving the recommended fee denom and recommend price amount (fee/gas): 
+
+
 
 ```JavaScript JavaScript
 type GasPrice = {
@@ -40,6 +44,8 @@ type GasPrice = {
 ### `SkipRouter.getFeeInfoForChain`
 
 This will return high, medium, and low gas prices for a particular chain, given by `chainID`, along with the default fee denom as a `FeeAsset` object:
+
+
 
 ```JavaScript JavaScript
 type FeeAsset = {
@@ -59,6 +65,8 @@ An undefined response indicates that the API cannot find up-to-date gas price in
 ### `SkipRouter.getFeeForMessage`
 
 This will give you the estimated fee and gas for a particular multichainMsg returned by the API. 
+
+
 
 ```JavaScript JavaScript
 async getFeeForMessage(
@@ -89,7 +97,9 @@ This field in `ExecuteRouteOptions` allows you to override our default gas price
 
 The argument is a function that takes in a chain id and returns a gas price for that chain as a `GasPrice` object from CosmJS
 
-```JavaScript JavaScript
+
+
+```text JavaScript
 type GasPrice = {
   denom: string;
   amount: Decimal
