--- a/handling-cross-chain-failure-cases.mdx
+++ b/handling-cross-chain-failure-cases.mdx
@@ -10,7 +10,7 @@ There are two types of IBC failures that may occur when a user attempts to trave
 1. **Pre-Swap / swap failures**  
    * **What:**  These are failures in the sequence of ICS-20 transfers leading up to the swap or a failure in the swap itself (usually due to slippage).  
    * **Outcome / What to Expect:**  The users' original source tokens are returned their starting address on the source chain  
-   * **Common failure sources:**  
+   * **Common causes:**  
          * Inactive relayers on a channel allow a packet to timeout  
          * Slippage (the amount out for the swap turns out to be less than the user's specified minimum, i.e. their slippage exceeds their tolerance)  
          * The user / frontend provides an invalid recovery address  
@@ -24,7 +24,7 @@ There are two types of IBC failures that may occur when a user attempts to trave
 
 In a pre-swap or swap related error, the user will end up with the same tokens they started with on their initial chain (e.g. ATOM on Neutron in this example)
 
-1. **Post-swap failures:**  
+2. **Post-swap failures:**  
    * **Description**: These are failures that occur on the sequence of transfers between the swap venue chain and the user's destination chain, after the user's origin tokens have already been successfully swapped for their desired destination asset.  
    * **Outcome / What to Expect**: The user's newly purchased destination asset tokens will be transferred to their address on the swap chain. (This is the address passed to `chains_to_addresses` in `/fungible/msgs` for the chain where the swap takes place, which is given by `swap_venue.chain_id` in the response from `/fungible/route`)  
    * **Common failure sources:**  
@@ -42,11 +42,11 @@ In a post-swap error, the user will end up with their destination asset tokens i
 
 Axelar transfers can be tracked on [Axelarscan](https://axelarscan.io/). Often, Axelar transfers are delayed by Axelar's relayer or execution services. If a transaction is taking longer than expected, users can visit Axelarscan, find their transaction, and manually execute the steps needed to get the transfer through. See the [Axelar docs](https://docs.axelar.dev/dev/general-message-passing/recovery) for details on how to use Axelarscan.
 
-Internally, the Skip API uses Axelar's General Message Passing service to move assets between EVM and Cosmos. There are similar failure modes for Axelar as there are for IBC:
+Internally, the Skip API may use Axelar's General Message Passing service to move assets between EVM and Cosmos. There are similar failure modes for Axelar as there are for IBC:
 
 1. **Swap failures**  
    * **What:**  Axelar GMP takes user assets from an EVM chain to the swap chain. The swap can still fail at this point due to a timeout or slippage.  
-   * **Outcome / What to Expect:**  The user receives the Axelar-transferred token on the swap chain at their recovery address.  
+   * **Outcome / What to Expect:**  The user receives the Axelar-transferred token on the chain where the swap was supposed to take place at their recovery address. (Note this is different from the IBC swap failure case where the user receives the swap token back on the source chain)  
    * **Common failure sources:**  
          * Slow relaying from Axelar causes a timeout, and the swap is not attempted.  
          * Slippage (the amount out for the swap turns out to be less than the user's specified minimum, i.e. their slippage exceeds their tolerance)
@@ -65,29 +65,27 @@ Each Hyperlane token transfer route is secured by an Interchain Security Module 
 
 The most common ISM is a Multisig ISM where "Validators" of a specific Hyperlane route sign attestations that a specific message on an origin chain is a valid message to be processed on the destination chain. In the case where the set of Validators have not hit the required signature threshold to successfully process a Hyperlane message on the receiving chain, funds will not be accessible by the user on either chain until the threshold is met (once met, funds will be sent to the user on the destination chain). This generalizes to the different requirements for different ISMs. The Hyperlane documentation explains the different types of ISMs in more detail: [https://docs.hyperlane.xyz/docs/reference/ISM/specify-your-ISM](https://docs.hyperlane.xyz/docs/reference/ISM/specify-your-ISM)
 
+
 <Warning>
-
-**Failures might occur for each transaction in a multi-tx sequence**
-
-In the event of a multi-tx route, each transaction may suffer from the kinds of failures noted above. This means it's technically inaccurate to say that tokens will always end up on the initial chain or the chain where the swap takes place. More accurately, tokens may end up on each chain where a transaction is initiated or the chain where the swap takes place. 
-
-For instance, if a pre-swap failure takes place on the second transaction in a sequence, the tokens will end up on the chain that transaction targeted. In our example above, if the transfer from Cosmos Hub to Osmosis required a separate user transaction and the Neutron to Hub leg of the route succeeded in the first transaction, the ATOM tokens would end up in the user's account on the Hub if the swap exceeds maximum slippage.
+ **Failures might occur for each transaction in a multi-tx sequence**
+ 
+ In the event of a multi-tx route, each transaction may suffer from the kinds of failures noted above. This means it's technically inaccurate to say that tokens will always end up on the initial chain or the chain where the swap takes place. More accurately, tokens may end up on each chain where a transaction is initiated or the chain where the swap takes place. 
+ 
+ For instance, if a pre-swap failure takes place on the second transaction in a sequence, the tokens will end up on the chain that transaction targeted. In our example above, if the transfer from Cosmos Hub to Osmosis required a separate user transaction and the Neutron to Hub leg of the route succeeded in the first transaction, the ATOM tokens would end up in the user's account on the Hub if the swap exceeds maximum slippage.
 </Warning>
 
-<Check>
-We're working to make these failures even less common
-
-* In the short term, we're working to add packet tracking + live relayer + client status to the API to help identify when packets get stuck and prevent folks from using channels where they're likely to get stuck in the first place
-* In the medium term, we are working to add priority multi-hop relaying into the API.
-* In the long term, we're working to build better incentives for relaying, so relayers don't need to run as charities. (Relayers do not receive fees or payment of any kind today and subsidize gas for users cross-chain)
-
-If you'd like to learn more, you can reach us easily at support@skip.money or in [our developer support channel on TG](https://t.me/+3y5biSyZRPIwZWIx)
-
-
-</Check>
 
 <Check>
-    Want to help us get better? Have questions or feedback?
-
-You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.  
+**We're working to make these failures even less common**
+ 
+ * In the short term, we're working to add packet tracking + live relayer + client status to the API to help identify when packets get stuck and prevent folks from using channels where they're likely to get stuck in the first place
+ * In the medium term, we are working to add priority multi-hop relaying into the API.
+ * In the long term, we're working to build better incentives for relaying, so relayers don't need to run as charities. (Relayers do not receive fees or payment of any kind today and subsidize gas for users cross-chain)
 </Check>
+
+
+<Check>
+ **Want to help us get better? Have questions or feedback?**
+ 
+ You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
+ </Check>
