--- a/fe-info.mdx
+++ b/fe-info.mdx
@@ -38,8 +38,8 @@ Each `Fee` object in the array will have the following attributes:
 </Warning>
 
   
-<Tip>
+<Check>
  **Want to help us get better? Have questions or feedback?**
  
  You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
- </Tip>
+ </Check>
