--- a/multi-chain-realtime-transaction-and-packet-tracking.mdx
+++ b/multi-chain-realtime-transaction-and-packet-tracking.mdx
@@ -485,8 +485,8 @@ Any execution errors for the initial transaction will be surfaced in the error f
 ```
 
 
- <Tip>
-** Want to help us get better? Have questions or feedback?**
+ <Check>
+**Want to help us get better? Have questions or feedback?**
  
  You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
- </Tip>
+ </Check>
