--- a/overview-and-typical-usage.mdx
+++ b/overview-and-typical-usage.mdx
@@ -61,9 +61,9 @@ On a cross-chain swapping and transferring frontend, integrators typically:
 ![](/images/a83beaf-CleanShot_2024-05-23_at_15.59.452x.png)   
 
 
- <Tip>
+ <Check>
 **Want to help us get better? Have questions or feedback?**
  
  You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
- </Tip>
+ </Check>
  
