--- a/quickstart-guide.mdx
+++ b/quickstart-guide.mdx
@@ -178,7 +178,7 @@ const route = await skipClient.route({
 
 
  <Note>
-** Adding a fee for yourself**
+**Adding a fee for yourself**
  
  You can your set your own swap fee into the quote by setting `cumulativeAffiliateFeeBPS` to the total fee amount you want to collect from the user, measured in hundredths of a percent (aka "bips"). 
  
@@ -224,7 +224,7 @@ Two things you should notice about this code:
 
 
 <Warning>
- Never attempt to derive an address on one chain from an address on another chain
+ **Never attempt to derive an address on one chain from an address on another chain**
  
  Whenever you need a user address, please request it from the corresponding wallet / signer. Do not attempt to use bech32 cross-chain derivation. 
  
@@ -266,8 +266,8 @@ After the transaction completes, you'll have additional TIA in your Celestia add
  </Info>
 
 
- <Tip>
- Want to help us get better? Have questions or feedback?
+ <Check>
+**Want to help us get better? Have questions or feedback?**
  
  You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
- </Tip>
+ </Check>
