--- a/smart-relay.mdx
+++ b/smart-relay.mdx
@@ -92,8 +92,8 @@ Smart Relay incurs a user cost because Smart Relay involves actually submitting 
 * **Token Exchange Rates:** The token the user pays their fee in and the token Smart Relaying pays gas fees in may differ, so exchange rates affect the price the end user experiences. (e.g. If the user pays in OSMO for a route that terminates on Ethereum mainnet, Smart Relay will need to pay fees in ETH, so the amount of OSMO the user pays will depend on the OSMO/ETH spot price.)
 
 
- <Tip>
-** Want to help us get better? Have questions or feedback?**
+ <Check>
+**Want to help us get better? Have questions or feedback?**
  
 You can reach us easily by joining [our Discord](https://skip.money/discord) and grabbing the "Skip API Developer" role.
- </Tip>
+ </Check>
