frames on photos

--- a/cw20-swaps.mdx
+++ b/cw20-swaps.mdx
@@ -60,9 +60,8 @@ In particular, this means you cannot perform the following actions in 1 transact
 
 * IBC transfer after purchasing a cw20 asset
 
-![Chain 1 is the origin chain where the cw20 token can be swapped freely, but it cannot be transferred to another chain in the same transaction.](/images/9afddc0-case1.jpg)
+<Frame caption="Chain 1 is the origin chain where the cw20 token can be swapped freely, but it cannot be transferred to another chain in the same transaction.">![Chain 1 is the origin chain where the cw20 token can be swapped freely, but it cannot be transferred to another chain in the same transaction.](/images/9afddc0-case1.jpg)</Frame>
 
-Chain 1 is the origin chain where the cw20 token can be swapped freely, but it cannot be transferred to another chain in the same transaction.
 
 * Call a contract on a remote chain after purchasing a cw20 asset (e.g. since this requires an IBC transfer under the hood)
 
