--- a/embed-a-swap-widget.mdx
+++ b/embed-a-swap-widget.mdx
@@ -8,9 +8,9 @@ description: "This guide provides step-by-step instructions to embed the Skip AP
 1. Go to [https://ibc.fun](https://ibc.fun)
 2. Modify the source/destination chains and assets to set the default route (optional)
 3. Click the "Embed" button  
-![](/images/d0c5fda-Screen_Shot_2024-06-04_at_12.15.27_AM.png)
+<Frame>![](/images/d0c5fda-Screen_Shot_2024-06-04_at_12.15.27_AM.png)</Frame>
 4. Copy the code  
-![](/images/d893b9d-Screen_Shot_2024-06-04_at_12.16.24_AM.png)
+<Frame>![](/images/d893b9d-Screen_Shot_2024-06-04_at_12.16.24_AM.png)</Frame>
 5. Paste it in to your project, and you're done!
 
 ### Helpful Tips
