--- a/how-to-generate-shareable-links.mdx
+++ b/how-to-generate-shareable-links.mdx
@@ -8,7 +8,7 @@ description: "This guide provides step-by-step instructions to generate IBC.fun 
 1. Go to [https://ibc.fun](https://ibc.fun)
 2. Modify the source/destination chains and assets to set the default route (optional)
 3. Click the "Share" button  
-![](/images/d1281bd-Screen_Shot_2024-06-11_at_2.40.19_PM.png)
+<Frame>![](/images/d1281bd-Screen_Shot_2024-06-11_at_2.40.19_PM.png)</Frame>
 4. Voila, you're done! The sharable link is now copied to your clipboard for you to embed on your website for an easy onboarding/deposit experience, to tweet about your bags, or to simply share it with your friends!
 
 ### Advanced Configuration Instructions
