--- a/ibc-routing-algorithm.mdx
+++ b/ibc-routing-algorithm.mdx
@@ -25,7 +25,7 @@ description: "This page describes the IBC token routing problem and the algorith
 
 IBC transfers data over "channels" that connect two chains. Channels are identified by human-readable port names (e.g. "transfer") and channel IDs (e.g. channel-1). For example, consider a transfer channel between Terra2 and Axelar: 
 
-![](/images/12bf3f9-Screen_Shot_2023-07-25_at_3.26.30_PM.png) 
+<Frame>![](/images/12bf3f9-Screen_Shot_2023-07-25_at_3.26.30_PM.png)</Frame> 
 
 _Notice that both chains maintain their own channel IDs for the channel, which might not be the same. As an analogy, you might think of the different chains as cities and the channel as a road connecting them. IBC packets are cars driving across the road_
 
@@ -54,11 +54,11 @@ Now that you understand that IBC denoms get their names from their paths, you un
 
 Continuing the example from above, WETH.axl transferred directly from Axelar to Terra2 will have a different denom than WETH.axl transferred through Osmosis: 
 
-![](/images/2477aba-Screen_Shot_2023-07-25_at_3.48.15_PM.png) 
+<Frame>![](/images/2477aba-Screen_Shot_2023-07-25_at_3.48.15_PM.png)</Frame>
 
 To make matters worse, multiple channels can exist between the same two chains (IBC is permissionless afterall), and IBC uses channel identifiers--not chain identifiers--to construct denoms. That means two different versions of the same asset will exist on the destination chain even when tokens are transferred from the same source chain, if they're transferred over two different channels: 
 
-![](/images/eb72804-Screen_Shot_2023-07-25_at_3.59.53_PM.png) 
+<Frame>![](/images/eb72804-Screen_Shot_2023-07-25_at_3.59.53_PM.png)</Frame>
 
 
  <Warning>
