--- a/getting-started.mdx
+++ b/getting-started.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 description: "This pages explains what the Skip API is, gives examples of applications built with it, and provides guidance on standard ways to use it."
 ---
 
-![](/images/4f92aa7-DALLE_Cover_Photo_1..png) 
+<Frame>![](/images/4f92aa7-DALLE_Cover_Photo_1..png)</Frame>
 
 ## 👋 Introduction
 
