--- a/multi-chain-realtime-transaction-and-packet-tracking.mdx
+++ b/multi-chain-realtime-transaction-and-packet-tracking.mdx
@@ -13,7 +13,7 @@ You can also use it to identify failure cases (e.g. a swap that fails due to sli
 
 For example, if one of your end users initiates a swap that begins with ATOM on Neutron and concludes with JUNO on Juno, you can use the lifecycle tracking to report when the ATOM moves from Neutron to the Hub, when it reaches Osmosis, and when the JUNO finally arrives safely on Juno. 
 
-![](/images/cc4fe76-Screenshot_2024-03-07_at_9.12.25_AM.png) 
+<Frame>![](/images/cc4fe76-Screenshot_2024-03-07_at_9.12.25_AM.png)</Frame> 
 
 ## Basics
 
