--- a/overview-and-typical-usage.mdx
+++ b/overview-and-typical-usage.mdx
@@ -47,18 +47,18 @@ The most important `tx` methods include:
 On a cross-chain swapping and transferring frontend, integrators typically: 
 
 1. Use the `info` methods to populate the list of potential starting & ending chains & assets
-![](/images/ca61685-CleanShot_2024-05-23_at_15.28.242x.png) 
+<Frame>![](/images/ca61685-CleanShot_2024-05-23_at_15.28.242x.png)</Frame> 
 
 2. Use `/fungible/route` (`SkipRouter.route`) to get a quote when the user selects all their chains & tokens and inputs one of their amounts
-![](/images/78d8d3f-CleanShot_2024-05-23_at_15.33.182x.png) 
+<Frame>![](/images/78d8d3f-CleanShot_2024-05-23_at_15.33.182x.png)</Frame> 
 
 3. Use `/fungible/msgs` (`SkipRouter.msgs`) to get a transaction for the user to sign after they've locked in the route & begun the transaction creation process
-![](/images/b42b522-CleanShot_2024-05-23_at_15.38.522x.png) 
+<Frame>![](/images/b42b522-CleanShot_2024-05-23_at_15.38.522x.png)</Frame> 
 
 4. Use `/tx/track`(`SkipRouter.trackTransaction`) to register the transaction for tracking (or `/tx/submit` to register and submit it on-chain)
 
 5. Use `/status` (`SkipRouter.transactionStatus`) to get the real-time status of the transaction as it progresses through multiple bridges/chains.
-![](/images/a83beaf-CleanShot_2024-05-23_at_15.59.452x.png)   
+<Frame>![](/images/a83beaf-CleanShot_2024-05-23_at_15.59.452x.png)</Frame>   
 
 
  <Check>
