api-ref section

--- a/how-to-generate-shareable-links.mdx
+++ b/how-to-generate-shareable-links.mdx
@@ -15,8 +15,8 @@ description: "This guide provides step-by-step instructions to generate IBC.fun 
 
 Instead of creating a route and sharing it via [https://ibc.fun](https://ibc.fun), you can create a sharable link with the following parameters of your choice: `src_chain`, `src_asset`, `dest_chain`, `dest_asset`, `amount_in`, and `amount_out`.
 
-* To see supported chains, you can use [https://api.skip.money/v1/info/chains](https://api.skip.money/v1/info/chains) see [docs](/reference/getchains)
-* To see supported assets, you can use [https://api.skip.money/v1/fungible/assets](https://api.skip.money/v1/fungible/assets) see [docs](/reference/getassets)
+* To see supported chains, you can use [https://api.skip.money/v1/info/chains](https://api.skip.money/v1/info/chains) see [docs](/api-reference/info/get-v1infochains)
+* To see supported assets, you can use [https://api.skip.money/v1/fungible/assets](https://api.skip.money/v1/fungible/assets) see [docs](/api-reference/getassets)
 
 **Query Base URL:** [https://ibc.fun/](https://ibc.fun/)
 
