--- a/quickstart-guide.mdx
+++ b/quickstart-guide.mdx
@@ -17,7 +17,7 @@ This will walkthrough shows you how to get started with the API by performing a 
 
 ## Reference Docs
 
-For detailed information on all the Skip API endpoints and functionality, please see our [reference docs](/reference/getchains). 
+For detailed information on all the Skip API endpoints and functionality, please see our [reference docs](/api-reference/info/get-v1infochains). 
 
 ## Example
 
@@ -167,7 +167,7 @@ const route = await skipClient.route({
  <Info>
  **Understanding the Route Response**
  
- The route response contains a ton of information about how the user can move from their source chain & token to their destination. For more information, see [/v2/fungible/route](/reference/getroutev2) reference docs.
+ The route response contains a ton of information about how the user can move from their source chain & token to their destination. For more information, see [/v2/fungible/route](/api-reference/getroutev2) reference docs.
  
  The most basic outputs you will need are: 
  
